Fix tablet layout to enforce two columns and center alignment (#9)
* Fix tablet layout to enforce two columns and center alignment

* Fix background color for button hover and focus states

* Fix navbar and footer styles for improved responsiveness and color consistency

* Fix footer menu alignment and container width for improved responsiveness

* Fix formatting and indentation in main.scss for improved readability

* Refactor best-value class and remove mobile media query for three-column pricing card

--- a/wp-content/themes/chahta-connect/src/styles/components/_footer.scss
+++ b/wp-content/themes/chahta-connect/src/styles/components/_footer.scss
@@ -2,6 +2,14 @@
 	--bs-link-color-rgb: 255, 255, 255;
 	--bs-link-hover-color-rgb: var(--bs-primary-rgb);
 
+	a {
+		&:hover,
+		&:focus,
+		&:focus-visible {
+			color: var(--bs-gray);
+		}
+	}
+
 	.logo {
 		--size: 15rem;
 
